fix about me scroll spacing

--- a/output.css
+++ b/output.css
@@ -586,6 +586,26 @@ video {
   z-index: 50;
 }
 
+.z-20 {
+  z-index: 20;
+}
+
+.z-0 {
+  z-index: 0;
+}
+
+.z-\[100\] {
+  z-index: 100;
+}
+
+.z-\[80\] {
+  z-index: 80;
+}
+
+.z-\[90\] {
+  z-index: 90;
+}
+
 .order-2 {
   order: 2;
 }
@@ -649,6 +669,14 @@ video {
 
 .mt-3 {
   margin-top: 0.75rem;
+}
+
+.-mt-\[140px\] {
+  margin-top: -140px;
+}
+
+.-mt-0 {
+  margin-top: -0px;
 }
 
 .block {
@@ -742,6 +770,50 @@ video {
 .rotate-180 {
   --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.scroll-mt-32 {
+  scroll-margin-top: 8rem;
+}
+
+.scroll-mt-8 {
+  scroll-margin-top: 2rem;
+}
+
+.scroll-mt-4 {
+  scroll-margin-top: 1rem;
+}
+
+.scroll-mt-48 {
+  scroll-margin-top: 12rem;
+}
+
+.-scroll-mt-16 {
+  scroll-margin-top: -4rem;
+}
+
+.-scroll-mt-32 {
+  scroll-margin-top: -8rem;
+}
+
+.-scroll-mt-8 {
+  scroll-margin-top: -2rem;
+}
+
+.-scroll-mt-4 {
+  scroll-margin-top: -1rem;
+}
+
+.-scroll-mt-12 {
+  scroll-margin-top: -3rem;
+}
+
+.-scroll-mt-24 {
+  scroll-margin-top: -6rem;
+}
+
+.-scroll-mt-20 {
+  scroll-margin-top: -5rem;
 }
 
 .grid-cols-1 {
@@ -920,6 +992,14 @@ video {
   padding-bottom: 1rem;
 }
 
+.pt-\[140px\] {
+  padding-top: 140px;
+}
+
+.pt-0 {
+  padding-top: 0px;
+}
+
 .text-center {
   text-align: center;
 }
@@ -1009,6 +1089,27 @@ video {
   transition-duration: 200ms;
 }
 
+.before\:absolute::before {
+  content: var(--tw-content);
+  position: absolute;
+}
+
+.before\:inset-0::before {
+  content: var(--tw-content);
+  inset: 0px;
+}
+
+.before\:z-\[-1\]::before {
+  content: var(--tw-content);
+  z-index: -1;
+}
+
+.before\:bg-gray-900::before {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity, 1));
+}
+
 .hover\:text-gray-600:hover {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity, 1));
@@ -1045,6 +1146,18 @@ video {
     margin-top: 1rem;
   }
 
+  .sm\:-mt-\[100px\] {
+    margin-top: -100px;
+  }
+
+  .sm\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .sm\:mt-\[140px\] {
+    margin-top: 140px;
+  }
+
   .sm\:block {
     display: block;
   }
@@ -1067,6 +1180,30 @@ video {
 
   .sm\:max-w-2xl {
     max-width: 42rem;
+  }
+
+  .sm\:scroll-mt-24 {
+    scroll-margin-top: 6rem;
+  }
+
+  .sm\:scroll-mt-8 {
+    scroll-margin-top: 2rem;
+  }
+
+  .sm\:scroll-mt-1 {
+    scroll-margin-top: 0.25rem;
+  }
+
+  .sm\:scroll-mt-32 {
+    scroll-margin-top: 8rem;
+  }
+
+  .sm\:scroll-mt-16 {
+    scroll-margin-top: 4rem;
+  }
+
+  .sm\:scroll-mt-28 {
+    scroll-margin-top: 7rem;
   }
 
   .sm\:justify-start {
@@ -1100,6 +1237,18 @@ video {
 
   .sm\:pb-6 {
     padding-bottom: 1.5rem;
+  }
+
+  .sm\:pt-\[100px\] {
+    padding-top: 100px;
+  }
+
+  .sm\:pt-0 {
+    padding-top: 0px;
+  }
+
+  .sm\:pt-\[140px\] {
+    padding-top: 140px;
   }
 
   .sm\:text-left {
